2008-05-25  Aidan Kehoe  <kehoea@parhasard.net>

	* chartab.c (Fmake_char_table): 
	Document the default return values for the various char table
	types. 
	* editfns.c (Ftranslate_region): Document why `generic' char tables
	are preferable to `char' char tables for this function. 

2008-05-21  Aidan Kehoe  <kehoea@parhasard.net>

	* fileio.c (Fmake_symbolic_link):
	Document behaviour when the underlying OS doesn't support symbolic
	links. 

2008-05-13  Aidan Kehoe  <kehoea@parhasard.net>

	* emacs.c (SHEBANG_EXE_PROGNAME_LENGTH):
	Use WEXTSTRING separately on the two concatenated strings,
	avoiding an error on Win32. 

2008-05-13  Aidan Kehoe  <kehoea@parhasard.net>

	* config.h.in (_CRT_NONSTDC_NO_DEPRECATE): 
	Define this, to avoid warnings about using standard POSIX and C9X
	functions on Win32; fixes part of Matthew Persico's problems of
	9ea6aaa80805081832r1a3308e9wb6d2bfea7457379f@mail.gmail.com .

2008-01-20  Aidan Kehoe  <kehoea@parhasard.net>

	* config.h.in: Add SHEBANG_PROGNAME.
	* emacs.c (main_1): 
	If we've been called using SHEBANG_PROGNAME, rewrite our arguments
	to add a --script argument. 
	Also, handle the --script argument by setting noninteractive and
	vanilla. 
	* lread.c (Fload_internal): 
	If the first two characters of a file are #!, replace them with ;!
	before they get to the Lisp reader. 

2008-04-26  Mike Sperber  <mike@xemacs.org>

	* window.c (set_window_pixsize): Round up when we're shrinking,
	down when we're growing * to make sure that pairs of grow / shrink
	meant to * cancel out actually do cancel out.  This fixes a
	problem with `resize-minibuffer-mode' where successive grow/shrink
	actions are meant to cancel out, but previously didn't.

2008-04-05  Aidan Kehoe  <kehoea@parhasard.net>

	* depend: 
	Regenerate with LF line endings, not CRLF. 

2008-03-15  Michael Sperber  <mike@xemacs.org>

	* lread.c (read1): Signal an error on ?\<newline>, thus preventing
	an assertion failure higher up.
